# rust-sdk

./: Cargo.toml  README.md  git_push.sh
.github/workflows/: release.yml
.openapi-generator/: FILES
docs/: AddCredits200Response.md  AddCreditsRequest.md  AnalyticsApi.md  ApiKey.md  ApiKeyResponse.md  ApiKeysApi.md  AutoRechargeSettings.md  BatchSyncPages200Response.md  BatchSyncPagesRequest.md  ChangeResult.md  ContentVerification.md  ContentVerificationApi.md  Crawl.md  CrawlingApi.md  CreateApiKeyRequest.md  CreateProjectRequest.md  CreditBalance.md  CreditBalanceInfo.md  CreditsApi.md  CustomCredentials.md  DeleteProject200Response.md  DeleteSuggestion200Response.md  Error.md  GenerateSuggestions200Response.md  GenerateSuggestionsRequest.md  GetImplementation200Response.md  GetPageChanges200Response.md  GetPageChanges200ResponseSummary.md  GetUserInfo200Response.md  GetUserInfo200ResponseLinks.md  GetUserInfo200ResponseUser.md  Implementation.md  ImplementationInstructions.md  ImplementationRequest.md  ImplementationResponse.md  ImplementationResult.md  ImplementationSummary.md  ImplementationsApi.md  LinkOpportunity.md  ListImplementations200Response.md  (+42 more)
src/apis/: analytics_api.rs  api_keys_api.rs  configuration.rs  content_verification_api.rs  crawling_api.rs  credits_api.rs  implementations_api.rs  mod.rs  pages_api.rs  projects_api.rs  suggestions_api.rs  user_api.rs  webhooks_api.rs
src/models/: add_credits_200_response.rs  add_credits_request.rs  api_key.rs  api_key_response.rs  auto_recharge_settings.rs  batch_sync_pages_200_response.rs  change_result.rs  (+65 more)
