[package]
name = "rankvectors"
version = "1.0.0"
authors = ["support@rankvectors.com"]
description = "Official RankVectors API SDK for Rust - Intelligent internal linking optimization using AI. Automatically discover and implement optimal internal links across your website."
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
